@@ -78,6 +78,7 @@ public class TestFlacParser extends TestCase {
         assertEquals("Test Comment", metadata.get(XMPDM.LOG_COMMENT));
         assertEquals("2010-01-26", metadata.get(XMPDM.RELEASE_DATE));
         assertEquals("1", metadata.get(XMPDM.TRACK_NUMBER));
+        assertEquals("0.02", metadata.get(XMPDM.DURATION));
 
         assertEquals("reference libFLAC 1.2.1 20070917", metadata.get(XMP.CREATOR_TOOL));
         assertEquals("reference libFLAC 1.2.1 20070917", metadata.get("vendor"));
@@ -94,6 +95,7 @@ public class TestFlacParser extends TestCase {
         assertTrue(content.contains("2010"));
         assertTrue(content.contains("Test Comment"));
         assertTrue(content.contains("Test Genre"));
+        assertTrue(content.contains("00:00:00.02"));
     }
 
     public void doTestFlacComments(InputStream input, boolean hasVersion) throws Exception {
